<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unit Converter</string>
    <string name="quantity">Quantity:</string>
    <string name="source">Source:</string>
    <string name="target">Target:</string>
    <string name="convert">Convert</string>
    <string name="result">Response:</string>
    <string name="hint">X</string>
    <string name="lengths">Lengths</string>
    <string name="Pressures">Pressures</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="choose_your_converter">Choose your converter</string>
</resources>
